syntax = "proto3";

package co.topl.grpc.services;

service ToplGrpc {
  rpc BroadcastTransaction (BroadcastTransactionReq) returns (BroadcastTransactionRes);
  rpc CurrentMempool (CurrentMempoolReq) returns (CurrentMempoolRes);

  rpc FetchBlockHeader (FetchBlockHeaderReq) returns (FetchBlockHeaderRes);
  rpc FetchBlockBody (FetchBlockBodyReq) returns (FetchBlockBodyRes);

}

message BroadcastTransactionReq {
  // TODO: Use a Transaction structure instead of just its transmittableBytes
  // But for now, just encode/decode the byte representation.  Re-implementing the full
  // structure requires re-implementing the full Proposition/Proof structure.
  bytes transmittableBytes = 1;
}

message BroadcastTransactionRes {}

message CurrentMempoolReq {}

message CurrentMempoolRes {
  repeated bytes transactionIds = 1;
}

message FetchBlockHeaderReq {
  bytes blockId = 1;
}

message FetchBlockHeaderRes {
  BlockHeader header = 1;
}

message BlockHeader {
  bytes parentHeaderId = 1;
  int64 parentSlot = 2;
  bytes txRoot = 3;
  bytes bloomFilter = 4;
  int64 timestamp = 5;
  int64 height = 6;
  int64 slot = 7;
  bytes eligibilityCertificate = 8;
  bytes operationalCertificate = 9;
  Metadata metadata = 10;
  bytes address = 11;

  message Metadata {
    bytes value = 1;
  }
}

message FetchBlockBodyReq {
  bytes blockId = 1;
}

message FetchBlockBodyRes {
  BlockBody body = 1;
}

message BlockBody {
  repeated bytes transactionIds = 1;
}
